<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">doantotnghiep</string>
    <!-- Language -->
    <string name="choice_lang_vn">Vui lòng chọn ngôn ngữ</string>
    <string name="lang_vn">Tiếng Việt</string>
    <string name="choice_lang_eng">Please select your language</string>
    <string name="lang_eng">English</string>
    <string name="btn_save">Lưu</string>
    <string name="account_title">Ba mẹ đã có tài khoản chưa?</string>
    <string name="already_account" >Tôi đã có tài khoản</string>
    <string name="no_account">Tôi chưa có tài khoản</string>
    <string name="login">Đăng nhập</string>
    <string name="signup">Đăng ký</string>
    <string name="title_login">Đăng nhập tài khoản</string>
    <string name="login_username">Điền Email</string>
    <string name="login_pass">Điền mật khẩu</string>
    <string name="forget_pass">Quên mật khẩu?</string>
    <string name="description_signup">Ba mẹ chưa có tài khoản?Đăng ký ngay!</string>
    <string name="title_signup">Đăng ký tài khoản</string>
    <string name="description_save_1">Lưu lại quá trình học tập</string>
    <string name="description_save_2">Sử dụng trên nhiều thiết bị</string>
    <string name="or">Hoặc</string>
    <string name="number_phone_editText">Nhập email của bạn...</string>
    <string name="or_continue">Hoặc tiếp tục với</string>
    <string name="description_login">Ba mẹ đã có tài khoản?Đăng nhập ngay!</string>
    <string name="title_pass">Thiết lập mật khẩu</string>
    <string name="description_pass">Tài khoản của bạn có thể được dùng để đăng nhập trên tất cả các thiết bị</string>
    <string name="fill_pass">Điền mật khẩu</string>
    <string name="return_pass">Xác nhận mật khẩu</string>
    <!-- Guide -->
    <string name="guide_study">Tạo hồ sơ học tập</string>
    <string name="name_kids">Tên của bé là gì?</string>
    <string name="fill_name">Điền tên của bé</string>
    <string name="btn_continue">Tiếp tục</string>
    <string name="age_kids">Bé bao nhiêu tuổi ?</string>
    <string name="birthday_kids">Bé sinh vào năm nào?</string>
    <string name="image_avatar">Chọn ảnh đại diện</string>
    <string name="take_a_shot">Chụp hình</string>
    <string name="load_image">Chọn hình</string>
    <string name="choice_charater">Chọn người học</string>
    <string name="warning_number_phone" >Kiểm tra email của bạn</string>
    <string name="warning_pass">Kiểm tra số mật khẩu của bạn</string>
    <string name="warning_age">Bạn phải lựa chọn số tuổi của bé</string>
    <string name="warning_name">Tên của bé không được để trống</string>
    <string name="age">Tuổi</string>
    <string name="cancell">Hủy nhiệm vụ</string>
    <string name="create_character">Tạo hồ sơ người học mới</string>
    <string name="cancell_create">Bạn có muốn hủy việc tạo người học mới không?</string>
    <string name="sign_success">Đăng kí thành công</string>
    <string name="upload_image">Tạo đối tượng trên cơ sở dữ liệu</string>
    <string name="create_character_success">Tạo thành công</string>
    <string name="warning_image">Bạn chọn ảnh đại diện cho bé</string>
    <string name="btn_delete">Xóa người học</string>
    <!-- Home -->
    <string name="lesson">Bài học</string>
    <string name="test">Kiểm tra</string>
    <string name="audio">Audio</string>
    <string name="sound">Nhạc</string>
    <!-- Lesson -->
    <string name="title_lesson">Chủ đề học tập</string>
    <string name="lesson1.1">Bảng chữ cái 1</string>
    <string name="lesson1.2">Bảng chữ cái 2</string>
    <string name="lesson2">Số đếm</string>
    <string name="lesson3">Màu sắc</string>
    <string name="lesson4">Hình dạng</string>
    <string name="lesson5">Xe cộ</string>
    <string name="lesson6">Động vật</string>
    <string name="lesson7">Rau củ quả</string>
    <string name="lesson8">Thời tiết</string>
    <string name="btn_previous">Quay lại</string>
    <string name="end_lesson">Chúc mừng bé đã hoàn thành bài học</string>
    <!-- Test -->
    <string name="test_title">Đề kiểm tra</string>
    <string name="btn_start">Bắt đầu</string>
    <string name="test1">Đề thi số 1</string>
    <string name="test2">Đề thi số 2</string>
    <string name="test3">Đề thi số 3</string>
    <string name="test4">Đề thi số 4</string>
    <string name="test5">Đề thi số 5</string>
    <string name="test6">Đề thi số 6</string>
    <string name="test7">Đề thi số 7</string>
    <string name="test8">Đề thi số 8</string>
    <string name="test9">Đề thi số 9</string>
    <string name="test10">Đề thi số 10</string>
    <string name="title_end_test">Chúc mừng bé đã hoàn thành kiểm tra</string>
    <string name="save_score">Bạn có muốn lưu điểm khi chưa hoàn thành bài kiểm tra</string>
    <string name="title_answer">Kết quả</string>
    <string name="score">Điểm</string>
    <!-- Detail Profile -->
    <string name="title_detail_profile">Thông tin người dùng</string>
    <string name="detail_parent">Thông tin bố mẹ</string>
    <string name="name_parent">Tên</string>
    <string name="email">Email</string>
    <string name="btn_add">Thêm</string>
    <string name="number_phone">Số điện thoại</string>
    <string name="user_pass">Quản lý tài khoản và mật khẩu</string>
    <string name="btn_update">Cập nhật</string>
    <string name="btn_detail">Chi tiết</string>
    <string name="btn_logout">Đăng xuất</string>
    <string name="title_update_pass">Cập nhật mật khẩu</string>
    <string name="manage_character">Quản lí người học</string>
    <string name="btn_edit">Chỉnh sửa</string>
    <string name="number_phone_description">Thêm hình thức đăng nhập bằng số điện thoại</string>
    <string name="warning_name_parent">Tên bố mẹ không được để trống</string>
    <string name="pass_old">Mật khẩu cũ</string>
    <string name="pass_new">Mật khẩu mới</string>
    <string name="return_pass_new">Xác nhận mật khẩu</string>
    <string name="warning_pass_old">Mật khẩu của bạn không chính xác</string>
    <string name="warning_pass_new">Mật khẩu của bạn không đúng định dạng</string>
    <string name="warning_pass_equal">Mật khẩu mới và mật khẩu nhập lại lại phải giống nhau</string>
    <string name="title_detail_profile_edit">Chỉnh sửa hồ sơ</string>
    <string name="dialog_title">Bạn có muốn hủy những thay đổi chưa được lưu không?</string>
    <string name="btn_yes">Có</string>
    <string name="btn_no">Không</string>
    <string name="update_character">Cập nhật thông tin cho bé thành công</string>
    <string name="update_user">Cập nhật thành công</string>
    <string name="warning_delete">Bạn có muốn xóa người học này</string>
    <string name="is_empty">Không đưc để tài khoản hoặc mật khẩu để trống</string>
</resources>