<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/circle"
            android:scaleType="center"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/title_pass"
            android:textColor="@color/orange"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/description_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/description_pass"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="35dp"/>
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="200dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/bg_border_search"
            android:drawablePadding="12dp"
            android:hint="@string/fill_pass"
            android:textColor="#252932"
            android:textColorHint="#8B93A7"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@id/description_pass" />
        <EditText
            android:id="@+id/return_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="200dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/bg_border_search"
            android:drawablePadding="12dp"
            android:hint="@string/return_pass"
            android:textColor="#252932"
            android:textColorHint="#8B93A7"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@id/pass" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_btn_radios"
            android:backgroundTint="@color/orange"
            app:layout_constraintEnd_toEndOf="@+id/return_pass"
            app:layout_constraintStart_toStartOf="@id/return_pass"
            app:layout_constraintTop_toBottomOf="@id/return_pass">

            <TextView
                android:id="@+id/tv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="120dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>