<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_update_pass"
        android:textColor="@color/orange"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:scaleType="center"
        android:background="@drawable/circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pass_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="16dp"
        android:textColorHint="#8B93A7"
        android:hint="@string/pass_old"
        app:passwordToggleEnabled="true"

        app:layout_constraintTop_toBottomOf="@id/title"

         >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_old"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@color/ltGray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_pass_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="16dp"
        android:textColorHint="#8B93A7"
        android:hint="@string/pass_new"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/layout_pass_old">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@color/ltGray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_return_pass_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="16dp"
        android:hint="@string/return_pass_new"
        app:passwordToggleEnabled="true"
        android:textColorHint="#8B93A7"
        app:layout_constraintTop_toBottomOf="@id/layout_pass_new">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/return_pass_new"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:background="@color/ltGray"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnUpdatePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_btn_radios"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/layout_return_pass_new"
        app:layout_constraintStart_toStartOf="@id/layout_return_pass_new"
        app:layout_constraintTop_toBottomOf="@id/layout_return_pass_new">
        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:layout_marginHorizontal="80dp"
            android:text="@string/btn_save"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>