<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title_detail_profile"
        android:textColor="@color/orange"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:scaleType="center"
        android:background="@drawable/circle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        >
        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/line2">

            <TextView
                android:id="@+id/title_detail_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_parent"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title_detail_parent"
                android:hint="@string/name_parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginHorizontal="32dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_radios"
                android:backgroundTint="@color/orange"
                app:layout_constraintTop_toBottomOf="@id/layout_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="16dp"
                    android:text="@string/btn_update"
                    android:textColor="@color/white"
                    android:paddingVertical="8dp"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@id/line2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/detail_parent"
            app:layout_constraintEnd_toStartOf="@id/email_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/line4"
            android:background="@android:color/darker_gray"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/email_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_parent"
            app:layout_constraintEnd_toStartOf="@id/line3"

            app:layout_constraintStart_toEndOf="@id/line2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_descriptoin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@id/line3"
            android:layout_width="1dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toEndOf="@id/email_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/line4"
            app:layout_constraintEnd_toStartOf="@id/number_phone_layout"
            android:background="@android:color/darker_gray"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/number_phone_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/line3"
            app:layout_constraintBottom_toBottomOf="@id/detail_parent">
            <TextView
                android:id="@+id/number_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_phone"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/number_phone_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/number_phone_description"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/number_phone" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_update_number_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_radios"
                android:backgroundTint="@color/orange"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="8dp"
                    android:text="@string/btn_update"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/line4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/detail_parent"/>
        <TextView
            android:id="@+id/user_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_pass"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line4" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_update_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_radios"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/user_pass"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:text="@string/title_update_pass"
                android:textColor="@color/white"
                android:paddingVertical="8dp"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:id="@+id/line5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_update_pass"/>
        <TextView
            android:id="@+id/manage_character"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_character"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/line5" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_radios"
            android:backgroundTint="@color/orange"
            app:layout_constraintTop_toBottomOf="@+id/manage_character"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:text="@string/btn_detail"
                android:textColor="@color/white"
                android:paddingVertical="8dp"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_radios"
            android:backgroundTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:text="@string/btn_logout"
                android:textColor="@color/white"
                android:paddingVertical="8dp"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>